[project]
name = "receiptprocessor" # Required
version = "0.0.1" # Required
description = "A sample Python project" # Optional
readme = "README.md" # Optional
requires-python = ">=3.8"
dependencies = [
    "graphframes@git+https://github.com/tuethan1999/graphframes.git#egg=graphframes&subdirectory=python",
    "numpy",
]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "pytest-xdist[psutil]"]
dev = ["ruff", "black[jupyter]"]

[tool.ruff]
line-length = 88
# pyflakes, pycodestyle, isort
select = ["F", "E", "W", "I001"]

[tool.pytest.ini_options]
addopts = ["--cov=receiptprocessor", "-nauto"]
